--- a/notebooks/Link prediction.ipynb
+++ b/notebooks/Link prediction.ipynb
@@ -1271,52 +1271,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "3b335e8e",
-   "metadata": {},
-   "source": [
-    "### XGBoost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "id": "d1884233",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The accuracy on the validation set is 0.99\n",
-      "The f1-score on the validation set is 0.99\n"
-     ]
-    }
-   ],
-   "source": [
-    "from xgboost import XGBClassifier\n",
-    "\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, labels, test_size=0.2, random_state=42)\n",
-    "\n",
-    "model = XGBClassifier(scale_pos_weight=1,\n",
-    "                      learning_rate=0.1,  \n",
-    "                      colsample_bytree = 0.4,\n",
-    "                      subsample = 0.8,\n",
-    "                      objective='binary:logistic', \n",
-    "                      n_estimators=1000, \n",
-    "                      reg_alpha = 0.3,\n",
-    "                      max_depth=7, \n",
-    "                      gamma=10)\n",
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred = model.predict(X_val)\n",
-    "\n",
-    "print(f\"The accuracy on the validation set is {round(accuracy_score(y_val, y_pred),4)}\")\n",
-    "print(f\"The f1-score on the validation set is {round(f1_score(y_val, y_pred),4)}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "24765728",
    "metadata": {},
@@ -1397,6 +1351,94 @@
     "import csv\n",
     "\n",
     "nb_submission = 1\n",
+    "\n",
+    "\n",
+    "# Load test samples \n",
+    "with open(\"../data/test.txt\", \"r\") as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    test_set = list(reader)\n",
+    "test_set = [element[0].split(\" \") for element in test_set]\n",
+    "\n",
+    "# Make random predictions\n",
+    "\n",
+    "predictions = zip(np.array(range(len(test_set))), y_pred)\n",
+    "\n",
+    "# note: Kaggle requires that you add \"ID\" and \"category\" column headers\n",
+    "\n",
+    "with open(f\"../data/submission_{nb_submission}.csv\",\"w\") as pred:\n",
+    "    csv_out = csv.writer(pred)\n",
+    "    csv_out.writerow(i for i in [\"ID\", \"Predicted\"])\n",
+    "    for row in predictions:\n",
+    "         csv_out.writerow(row)\n",
+    "    pred.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3b335e8e",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d1884233",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy on the validation set is 0.99\n",
+      "The f1-score on the validation set is 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "model = XGBClassifier(scale_pos_weight=1,\n",
+    "                      learning_rate=0.1,  \n",
+    "                      colsample_bytree = 0.4,\n",
+    "                      subsample = 0.8,\n",
+    "                      objective='binary:logistic', \n",
+    "                      n_estimators=1000, \n",
+    "                      reg_alpha = 0.3,\n",
+    "                      max_depth=7, \n",
+    "                      gamma=10)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_val)\n",
+    "\n",
+    "print(f\"The accuracy on the validation set is {round(accuracy_score(y_val, y_pred),4)}\")\n",
+    "print(f\"The f1-score on the validation set is {round(f1_score(y_val, y_pred),4)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "019400ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "b464f645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "nb_submission = 2\n",
     "\n",
     "\n",
     "# Load test samples \n",
