--- a/notebooks/Link prediction.ipynb
+++ b/notebooks/Link prediction.ipynb
@@ -1421,6 +1421,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "id": "8caca88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC-ROC score: 0.9900686581054936\n"
+     ]
+    }
+   ],
+   "source": [
+    "auc_roc = roc_auc_score(y_val, y_pred)\n",
+    "print(\"AUC-ROC score:\", auc_roc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 72,
    "id": "019400ee",
    "metadata": {},
